--- a/Workflow.bib
+++ b/Workflow.bib
@@ -924,7 +924,7 @@ year = {2015}
   file = {/home/alan/Zotero/storage/W9RP9PJS/Smith and Roberts - 1993 - Bayesian Computation Via the Gibbs Sampler and Rel.pdf},
   journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
   language = {en},
-  number = {1}7
+  number = {17}
 }
 @article{Cowles1996,
   title = {Markov {{Chain Monte Carlo Convergence Diagnostics}}: {{A Comparative Review}}},
@@ -996,4 +996,134 @@ year = {2015}
   file = {/home/alan/Zotero/storage/SAKIES9G/Amezquita et al. - 2019 - Orchestrating Single-Cell Analysis with Bioconduct.pdf},
   language = {en},
   type = {Preprint}
+}
+@article{Ritchie2015,
+  title = {Limma Powers Differential Expression Analyses for {{RNA}}-Sequencing and Microarray Studies},
+  author = {Ritchie, Matthew E. and Phipson, Belinda and Wu, Di and Hu, Yifang and Law, Charity W. and Shi, Wei and Smyth, Gordon K.},
+  year = {2015},
+  month = apr,
+  volume = {43},
+  pages = {e47-e47},
+  issn = {1362-4962, 0305-1048},
+  doi = {10.1093/nar/gkv007},
+  file = {/home/alan/Zotero/storage/PJFCJ3CA/Ritchie et al. - 2015 - limma powers differential expression analyses for .pdf},
+  journal = {Nucleic Acids Research},
+  language = {en},
+  number = {7}
+}
+@article{Love2014,
+  title = {Moderated Estimation of Fold Change and Dispersion for {{RNA}}-Seq Data with {{DESeq2}}},
+  author = {Love, Michael I and Huber, Wolfgang and Anders, Simon},
+  year = {2014},
+  month = dec,
+  volume = {15},
+  pages = {550},
+  issn = {1474-760X},
+  doi = {10.1186/s13059-014-0550-8},
+  abstract = {In comparative high-throughput sequencing assays, a fundamental task is the analysis of count data, such as read counts per gene in RNA-seq, for evidence of systematic changes across experimental conditions. Small replicate numbers, discreteness, large dynamic range and the presence of outliers require a suitable statistical approach. We present DESeq2, a method for differential analysis of count data, using shrinkage estimation for dispersions and fold changes to improve stability and interpretability of estimates. This enables a more quantitative analysis focused on the strength rather than the mere presence of differential expression. The DESeq2 package is available at http://www. bioconductor.org/packages/release/bioc/html/DESeq2.html.},
+  file = {/home/alan/Zotero/storage/M292X3QP/Love et al. - 2014 - Moderated estimation of fold change and dispersion.pdf},
+  journal = {Genome Biology},
+  language = {en},
+  number = {12}
+}
+@article{McCarthy2012,
+  title = {Differential Expression Analysis of Multifactor {{RNA}}-{{Seq}} Experiments with Respect to Biological Variation},
+  author = {McCarthy, Davis J. and Chen, Yunshun and Smyth, Gordon K.},
+  year = {2012},
+  month = may,
+  volume = {40},
+  pages = {4288--4297},
+  issn = {1362-4962, 0305-1048},
+  doi = {10.1093/nar/gks042},
+  file = {/home/alan/Zotero/storage/H9C59RSH/McCarthy et al. - 2012 - Differential expression analysis of multifactor RN.pdf},
+  journal = {Nucleic Acids Research},
+  language = {en},
+  number = {10}
+}
+@article{Wills2013,
+  title = {Single-Cell Gene Expression Analysis Reveals Genetic Associations Masked in Whole-Tissue Experiments},
+  author = {Wills, Quin F and Livak, Kenneth J and Tipping, Alex J and Enver, Tariq and Goldson, Andrew J and Sexton, Darren W and Holmes, Chris},
+  year = {2013},
+  month = aug,
+  volume = {31},
+  pages = {748--752},
+  issn = {1087-0156, 1546-1696},
+  doi = {10.1038/nbt.2642},
+  file = {/home/alan/Zotero/storage/MSJEVS7L/Wills et al. - 2013 - Single-cell gene expression analysis reveals genet.pdf},
+  journal = {Nature Biotechnology},
+  language = {en},
+  number = {8}
+}
+@article{Buettner2015,
+  title = {Computational Analysis of Cell-to-Cell Heterogeneity in Single-Cell {{RNA}}-Sequencing Data Reveals Hidden Subpopulations of Cells},
+  author = {Buettner, Florian and Natarajan, Kedar N and Casale, F Paolo and Proserpio, Valentina and Scialdone, Antonio and Theis, Fabian J and Teichmann, Sarah A and Marioni, John C and Stegle, Oliver},
+  year = {2015},
+  month = feb,
+  volume = {33},
+  pages = {155--160},
+  issn = {1087-0156, 1546-1696},
+  doi = {10.1038/nbt.3102},
+  file = {/home/alan/Zotero/storage/XBBMLKDS/Buettner et al. - 2015 - Computational analysis of cell-to-cell heterogenei.pdf},
+  journal = {Nature Biotechnology},
+  language = {en},
+  number = {2}
+}
+@article{Arriaga2009,
+  title = {Determining Biological Noise via Single Cell Analysis},
+  author = {Arriaga, Edgar A.},
+  year = {2009},
+  month = jan,
+  volume = {393},
+  pages = {73--80},
+  issn = {1618-2642, 1618-2650},
+  doi = {10.1007/s00216-008-2431-z},
+  abstract = {Single cell analysis techniques describe the cellular heterogeneity that originates from fundamental stochastic variations in each of the molecular processes underlying cell function. The quantitative description of this set of variations is called biological noise and includes intrinsic and extrinsic noise. The former refers to stochastic variations directly involved with a given process, while the latter is due to environmental factors associated with other processes. Mathematical models are successful in predicting noise trends in simple biological systems, but it takes single cell techniques such as flow cytometry and time lapse microscopy to determine and dissect biological noise. This review describes several approaches that have been successfully used to describe biological noise.},
+  file = {/home/alan/Zotero/storage/GQEQ3BQ7/Arriaga - 2009 - Determining biological noise via single cell analy.pdf},
+  journal = {Analytical and Bioanalytical Chemistry},
+  language = {en},
+  number = {1}
+}
+@article{Fu2012,
+  title = {A Multiply Redundant Genetic Switch 'locks in' the Transcriptional Signature of Regulatory {{T}} Cells},
+  author = {Fu, Wenxian and Ergun, Ayla and Lu, Ting and Hill, Jonathan A and Haxhinasto, Sokol and Fassett, Marlys S and Gazit, Roi and Adoro, Stanley and Glimcher, Laurie and Chan, Susan and Kastner, Philippe and Rossi, Derrick and Collins, James J and Mathis, Diane and Benoist, Christophe},
+  year = {2012},
+  month = oct,
+  volume = {13},
+  pages = {972--980},
+  issn = {1529-2908, 1529-2916},
+  doi = {10.1038/ni.2420},
+  file = {/home/alan/Zotero/storage/2XI5IE9L/Fu et al. - 2012 - A multiply redundant genetic switch 'locks in' the.pdf},
+  journal = {Nature Immunology},
+  language = {en},
+  number = {10}
+}
+@article{Best2013,
+  title = {Transcriptional Insights into the {{CD8}}+ {{T}} Cell Response to Infection and Memory {{T}} Cell Formation},
+  author = {Best, J Adam and Knell, Jamie and Yang, Edward and Mayya, Viveka and Doedens, Andrew and Dustin, Michael L and Goldrath, Ananda W},
+  year = {2013},
+  month = apr,
+  volume = {14},
+  pages = {404--412},
+  issn = {1529-2908, 1529-2916},
+  doi = {10.1038/ni.2536},
+  file = {/home/alan/Zotero/storage/WMXXIRCC/The Immunological Genome Project Consortium et al. - 2013 - Transcriptional insights into the CD8+ T cell resp.pdf},
+  journal = {Nature Immunology},
+  language = {en},
+  number = {4}
+}
+@article{Zhu2010,
+  title = {Peripheral {{CD4}}+ {{T}}-Cell Differentiation Regulated by Networks of Cytokines and Transcription Factors: {{Transcription}} Factor Network in {{Th}} Cells},
+  shorttitle = {Peripheral {{CD4}}+ {{T}}-Cell Differentiation Regulated by Networks of Cytokines and Transcription Factors},
+  author = {Zhu, Jinfang and Paul, William E.},
+  year = {2010},
+  month = nov,
+  volume = {238},
+  pages = {247--262},
+  issn = {01052896},
+  doi = {10.1111/j.1600-065X.2010.00951.x},
+  abstract = {CD4+ T cells, also known as T-helper (Th) cells, play an important role in orchestrating adaptive immune responses to various infectious agents. They are also involved in the induction of autoimmune and allergic diseases. Upon T-cell receptor (TCR)-mediated cell activation, naive CD4+ T cells can differentiate into at least four major lineages, Th1, Th2, Th17, and iTreg cells, that participate in different types of immune responses. Networks of cytokines and transcription factors are critical for determining CD4+ T-cell fates and effector cytokine production. Here, we review collaboration and cross-regulation between various essential cytokines in the activation {$\fracslash$} induction of key transcription factors during the process of Th cell differentiation towards these distinct lineages. We also discuss the interactions of key transcription factors at both genetic and protein levels and the function of the resulting network(s) in regulating the expression of effector cytokines.},
+  file = {/home/alan/Zotero/storage/EX9N6CQP/Zhu and Paul - 2010 - Peripheral CD4+ T-cell differentiation regulated b.pdf},
+  journal = {Immunological Reviews},
+  language = {en},
+  number = {1}
 }
